better handles view styling Committed on the Free edition of March Hare Software CVSNT Server. Upgrade to CVS Suite for more features and support: http://march-hare.com/cvsnt/

--- a/product_price_alterer_field/product_price_alterer_field.css
+++ b/product_price_alterer_field/product_price_alterer_field.css
@@ -8,6 +8,7 @@
   font-weight: normal;
 }
 
-.field-type-discounted-price, td.views-field-discounted-price {
+.field-type-discounted-price, td.views-field-discounted-price,
+.views-field-discounted-price .field-content {
 	color: Red;
 }
