--- a/uc_discounts/uc_discounts.css
+++ b/uc_discounts/uc_discounts.css
@@ -15,27 +15,26 @@
   width: 100%;
 }
 
-#uc_discounts_table td.date,
-#uc_discounts_table td.operations {
+table.uc-discounts td.date,
+table.uc-discounts td.operations {
   white-space: nowrap;
 }
 
-#uc_discounts_table td.operations a {
+table.uc-discounts td.operations a {
   padding-right: 5px;
 }
 
-#uc_discounts_table td.amount,
-#uc_discounts_table td.weight {
+table.uc-discounts td.numeric {
   text-align: center;
 }
 
-#uc_discounts_table td.is_inactive,
-#uc_discounts_table td.is_active {
+table.uc-discounts td.is_inactive,
+table.uc-discounts td.is_active {
   text-align: center;
   font-weight: bold;
   color: green;
 }
 
-#uc_discounts_table td.is_inactive {
+table.uc-discounts td.is_inactive {
   color: red;
 }
