Issue by tinker: Replace functions used to modify cart display before and during checkout.

--- a/uc_discounts/uc_discounts.css
+++ b/uc_discounts/uc_discounts.css
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+#discount-subtotal-title, #discount-amount-title {
+  font-weight: bold;
+}
+
 .uc-discounts-cart-pane-table {
   text-align: right;
   width: 100%;
